@@ -1,3 +1,4 @@
+2009-Jul-10     cpo                     Improvements to acqiris configuration classes.
 2009-Jun-01	weaver	Tag V00-04-00.	Tagged Amedeo's changes to xtc/Sequence.
 2009-Apr-16	weaver			Added pulnix directory and its configuration data type.  
 					Added out-of-order damage type.
